# PatentTagging

./: .gitignore  .gitmodules  Dataset.py  Dictionary.py  LICENSE  Model.py  Predict.py  Train.py  Utils.py  XmlParser.py  main.py  requirements.txt
tools/: .gitignore  CMakeLists.txt  ConcurrentQueue.h  FileDistributor.cpp  FileDistributor.h  PatentTagCollector.cpp  PatentTagCollector.h  PatentTagWalker.cpp  PatentTagWalker.h  README.md  Semaphore.h  ThreadDispatcher.cpp  ThreadDispatcher.h  ThreadJob.cpp  ThreadJob.h  main.cpp  output.txt
tools/AllTextExtractor/: CMakeLists.txt  main.cpp
tools/ClassificationStatsCollector/: CMakeLists.txt
tools/ClassificationStatsCollector/include/: ClassificationStatsWriter.h
tools/ClassificationStatsCollector/src/: ClassificationStatsWriter.cpp  main.cpp
tools/Database/: CMakeLists.txt
tools/Database/SwigWrapper/: CMakeLists.txt  DatabaseQueryBenchmark.cpp  DatabaseQueryWrapper.cpp  DatabaseQueryWrapper.h
tools/Database/SwigWrapper/java/: CMakeLists.txt  DatabaseQueryJava.i
tools/Database/SwigWrapper/python/: CMakeLists.txt  DatabaseQueryPython.i
tools/Database/include/: DataAndIndexGeneratorThread.h  DataBasicTypes.h  DataRecordFileV2.cpp  DataRecordFileV2.h  DataTypes.h  DatabaseFileWriterThread.h  DatabaseGenerator.h  DatabaseQuery.h  DatabaseQueryManager.h  DatabaseQuerySelector.h  Helper.h  IndexTableV2.h  NodeFilters.h  OutputFormatters.h  XpathQueryCollection.cpp  XpathQueryCollection.h
tools/Database/include/XpathQueryCollection/: 2004.cpp  2004.h  2005.cpp  2005.h  2019.cpp  2019.h
tools/Database/src/: DataAndIndexGeneratorThread.cpp  DataRecordFileV2.cpp  DataTypes.cpp  DatabaseFileWriterThread.cpp  DatabaseQuery.cpp  DatabaseQueryManager.cpp  DatabaseQuerySelector.cpp  IndexTableV2.cpp  NodeFilters.cpp  OutputFormatters.cpp  main.cpp
tools/DiskIOSpeedBenchmark/: CMakeLists.txt  main.cpp
tools/DistributeXmlBasedOnClassification/: CMakeLists.txt
tools/DistributeXmlBasedOnClassification/src/: main.cpp
tools/EngPatentInfoExtractor/: CMakeLists.txt  main.cpp
tools/PatentClassFilter/: CMakeLists.txt  main.cpp
tools/PatentDataPreprocessor/: CMakeLists.txt
tools/PatentDataPreprocessor/include/: ClassificationStatsWriter.h  FormatFunctors.h  FunctorDict.h  PatentInfoCollector.h  PatentInfoPC.h  PatentTagAbstractWalker.h  PatentTagTextCollector.h  TagConstants.h  TagNodeFilterFunctors.h  TagTextFormatter.h  Utility.h  XmlFileReader.h  XmlTagTextWalker.h
tools/PatentDataPreprocessor/src/: ClassificationStatsWriter.cpp  FormatFunctors.cpp  PatentInfoCollector.cpp  PatentInfoPC.cpp  PatentTagAbstractWalker.cpp  PatentTagTextCollector.cpp  TagTextFormatter.cpp  XmlTagTextWalker.cpp  main.cpp  test.cpp
tools/PatentTagCollector/: CMakeLists.txt
tools/PatentTagCollector/include/: FileDistributor.h  PatentTagCollector.h  PatentTagWalker.h  StatsThread.h  ThreadDispatcher.h
tools/PatentTagCollector/src/: FileDistributor.cpp  PatentTagCollector.cpp  Semaphore.cpp  StatsThread.cpp  ThreadDispatcher.cpp  main.cpp
tools/docs/: Doxyfile.in
tools/include/: ConcurrentQueue.h  MetaFunctionHelpers.h  StatsThread.h  ThreadJob.h  ThreadPool.h
tools/shared/: CMakeLists.txt
tools/shared/include/: Barrier.h  CQueue.h  ConcurrentBlockingStaticQueue.h  ConcurrentQueue.h  ConcurrentStaticQueue.h  FileReaderThread.h  FormatFunctors.h  FunctorDict.h  PatentInfoWriter.h  PatentTagTextCollector.h  Queue.h  Semaphore.h  Shared.h  StaticQueue.h  StatsThread.h  TagConstants.h  TagNodeFilterFunctors.h  ThreadModelInterface.h  ThreadPool.h  Utility.h  XmlBufferTagTextPrinterProcessorThread.h  XmlBufferXpathIPOTagTextPrinterTester.h  XmlErrorFile.h  XmlFile.h  XmlFilterOutputIPOInterface.h  XmlIOReaderThread.h  XmlIPOInterface.h  XmlIPOTagTextPrinterTester.h  XmlInfoWriter.h  XmlPCProcessorInterface.h  XmlPCProcessorTester.h  XmlPathFileReader.h  XmlReaderThread.h  XmlTagTextPrinterProcessorThread.h  XmlTagTextPrinterProcessorXpathThread.h  XmlTagTextPrinterWriterThread.h  XmlXpathIPOGenericInterface.h  XmlXpathIPOInterface.h  XmlXpathIPOTagTextPrinterTester.h  XpathQuery.h  (+2 more)
tools/shared/src/: Barrier.cpp  FileReaderThread.cpp  FormatFunctors.cpp  PatentInfoWriter.cpp  PatentTagTextCollector.cpp  Semaphore.cpp  TagNodeFilterFunctors.cpp  XmlBufferTagTextPrinterProcessorThread.cpp  XmlFileReader.cpp  XmlIOReaderThread.cpp  XmlIPOTagTextPrinterTester.cpp  XmlInfoWriter.cpp  XmlPCProcessorTester.cpp  XmlPathFileReader.cpp  XmlReaderThread.cpp  XmlTagTextPrinterProcessorThread.cpp  XmlTagTextPrinterProcessorXpathThread.cpp  XmlTagTextPrinterWriterThread.cpp  XpathQueryTextFormatter.cpp
tools/swig_out/python/: test.py  testV2.py
